fixed the horizontal scrolling issue.

--- a/background-video.css
+++ b/background-video.css
@@ -32,6 +32,6 @@
   
 }
 @media (max-width: 480px) {
-    .video-background {height: 77.6%;width: 91%;object-position: 82%;transform: translateY(-2%);}
+    .video-background {height: 109.6%;width: 100%;object-position: 71.1%;transform: translateY(-2%);}
   
 }
